--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,10 @@
 {
     "require": {
-        "symfony/console": "*",
-        "symfony/yaml": "*",
+        "symfony/console": "2.6.*",
+        "symfony/yaml": "2.6.*"
+    },
+
+    "require-dev": {
         "phpunit/phpunit": "4.3.*"
     },
 
