Update dependencies, also including symfony/process in the core package

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "symfony/console": "2.6.*",
-        "symfony/yaml": "2.6.*"
+        "symfony/yaml": "2.6.*",
+        "symfony/process": "2.6.*"
     },
 
     "require-dev": {
