--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,12 @@
 {
+    "name": "modmore/Gitify",
+    "version": "0.10.0",
+    "description": "Command line toolkit to make managing a MODX site in git a lot easier",
     "require": {
         "symfony/console": "2.6.*",
         "symfony/yaml": "2.6.*",
         "symfony/process": "2.6.*"
     },
-
     "require-dev": {
         "phpunit/phpunit": "4.3.*"
     },
