--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "modmore/Gitify",
+    "name": "modmore/gitify",
     "version": "0.12.0",
     "description": "Command line toolkit to make managing a MODX site in git a lot easier",
     "require": {
-        "kbjr/Git.php": "*",
+        "kbjr/git.php": "*",
         "symfony/console": "2.6.*",
         "symfony/yaml": "2.6.*",
         "symfony/process": "2.6.*"
@@ -11,25 +11,31 @@
     "require-dev": {
         "phpunit/phpunit": "8.1.*"
     },
-    "repositories":[
+    "repositories": [
         {
-            "type":"package",
-            "package":{
-                "name":"kbjr/Git.php",
-                "version":"0.2.0",
-                "source":{
-                    "type":"git",
-                    "url":"https://github.com/kbjr/Git.php",
-                    "reference":"master"
+            "type": "package",
+            "package": {
+                "name": "kbjr/git.php",
+                "version": "0.2.0",
+                "source": {
+                    "type": "git",
+                    "url": "https://github.com/kbjr/git.php",
+                    "reference": "master"
                 },
                 "autoload": {
-                    "classmap": ["Git.php"]
+                    "classmap": [
+                        "git.php"
+                    ]
                 }
             }
         }
-     ],
+    ],
     "autoload": {
-        "psr-4": {"modmore\\Gitify\\":"src/"}
+        "psr-4": {
+            "modmore\\Gitify\\": "src/"
+        }
     },
-    "bin": ["Gitify"]
+    "bin": [
+        "Gitify"
+    ]
 }
