Use proper case for class name

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
                 },
                 "autoload": {
                     "classmap": [
-                        "git.php"
+                        "Git.php"
                     ]
                 }
             }
