--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "modmore/gitify",
-    "version": "0.12.0",
     "description": "Command line toolkit to make managing a MODX site in git a lot easier",
+    "license": "MIT",
     "require": {
         "kbjr/git.php": "*",
         "symfony/console": "5.3.*",
